<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tell_us"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold|italic"
        android:background="@color/yellow"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_name"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_name2"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/text_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Age"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_name3"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/text_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Interests"/>


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button1"
        android:layout_marginLeft="130dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="storeMyPreferences"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_pic"
        app:srcCompat="@drawable/self"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button2"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="20dp"
        android:onClick="moveToIntroductory"/>


</LinearLayout>