<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavouritesControlActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_title"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_description"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_date"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/text_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_link"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/text_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />




    <Button
        android:id="@+id/readTheArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_readArticle"
        android:layout_marginLeft="50dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="readArticle"/>
    <Button
        android:id="@+id/button_addToFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_addFav"
        android:layout_marginLeft="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="addToFavourites"/>
    <Button
        android:id="@+id/button_disFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_disFav"
        android:layout_marginLeft="90dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="displayFav"/>


</LinearLayout>

